<resources>
    <string name="app_name">Favorite GitHub Users</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="app_icon">App Icon</string>
    <string name="github_search">GitHub Search User</string>
    <string name="repos" translatable="false">Repos</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="Kval">%sk</string>
    <string name="Mval">%sm</string>
    <string name="Bval">%sb</string>
    <string name="go_to_user_profile_at_github">Go to User Profile at GitHub</string>
    <string name="no_list">No %s</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="share_value">GitHub User\nID: %1$d\nUsername: %2$s\nI challenge you to find this user</string>
    <string name="share_send">Send to?</string>
    <string name="delete_succeed">%s successfully removed from Favorite list</string>
    <string name="insert_succeed">%s successfully inserted to Favorite list</string>
    <string name="more_options">More Options</string>
    <string name="close_menu">Close Menu</string>
    <string name="expand">Expand</string>
    <string name="favorite_list">Favorite Users</string>
    <string name="empty_fav">No favorite users</string>
    <string name="notif_title">Reminder</string>
    <string name="notif_msg">Hi, lets find another GitHub user</string>
    <string name="settings">Settings</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_summary">You will be reminded every 9 AM</string>
    <string name="key_setting" translatable="false">setting keys</string>
    <string name="reminder_on">Reminder turned ON</string>
    <string name="reminder_off">Reminder turned OFF</string>
    <string name="tap_to_refresh">Tap to refresh</string>
</resources>